# anyrun-plugins

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.claude/: settings.json
.github/: dependabot.yml
menu-bar/: Cargo.toml  README.md
menu-bar/examples/: menu-bar.ron
menu-bar/src/: lib.rs  querier.rs
nix/: plugin.nix
ssh-pattern/: Cargo.toml  README.md
ssh-pattern/src/: lib.rs  querier.rs
