[package]
name = "ssh-pattern"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ssh-pattern is a ssh search plugin for anyrun."
keywords = ["anyrun", "ssh"]
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable.workspace = true
anyrun-plugin.workspace = true
ron.workspace = true
serde.workspace = true
which.workspace = true
fuzzy-matcher.workspace = true
dirs = "6"
ssh2-config = "0.7"
